add_subdirectory( euler )                        # library coolfluid_sdm_euler
add_subdirectory( lineuler     )                 # library coolfluid_sdm_lineuler

add_subdirectory( scalar       )                 # library coolfluid_sdm_scalar
add_subdirectory( navierstokes )                 # library coolfluid_sdm_navierstokes
add_subdirectory( navierstokesmovingreference )  # library coolfluid_sdm_navierstokesmovingreference