add_subdirectory( advectiondiffusion )           # library coolfluid_sdm_equations_advectiondiffusion
add_subdirectory( euler )                        # library coolfluid_sdm_equtions_euler
add_subdirectory( lineuler     )                 # library coolfluid_sdm_equtions_lineuler

add_subdirectory( scalar       )                 # library coolfluid_sdm_equations_scalar
add_subdirectory( navierstokes )                 # library coolfluid_sdm_equations_navierstokes
add_subdirectory( navierstokesmovingreference )  # library coolfluid_sdm_equations_navierstokesmovingreference