add_subdirectory( advectiondiffusion )           # library coolfluid_dcm_equations_advectiondiffusion
add_subdirectory( euler )                        # library coolfluid_dcm_equtions_euler
add_subdirectory( navierstokes )                 # library coolfluid_dcm_equations_navierstokes
add_subdirectory( les )                          # library coolfluid_dcm_equations_navierstokes
add_subdirectory( lineuler     )                 # library coolfluid_dcm_equtions_lineuler

add_subdirectory( scalar       )                 # library coolfluid_dcm_equations_scalar

add_subdirectory( navierstokesmovingreference )  # library coolfluid_dcm_equations_navierstokesmovingreference
